# vigia-eew

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  README.md  config.toml.example  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: build.yml  ci.yml  security.yml
docs/: API-SPEC.md  DATA-MODEL.md  IMPLEMENTATION-PLAN.md  PRD.md  TECHNICAL-DESIGN.md
docs/plans/: 2026-07-05-country-filter-design.md  2026-07-05-geofon-design.md
packaging/: RELEASING.md  build_countries_geojson.py  build_linux.sh  build_macos.sh  build_windows.ps1  entrypoint.py  vigia-eew.spec
packaging/apt-r2/: README.md
src/vigia_eew/: __init__.py  agent_state.py  app.py  backoff.py  cli.py  config.py  config.toml.example  estado_agente.py  geo.py  geocode.py  geoloc.py  i18n.py  logging_conf.py  models.py  simulacion.py  simulation.py  state.py  subprocess_env.py  supervisor.py  timeutil.py  tray.py  tui.py
src/vigia_eew/assets/: countries.geojson
src/vigia_eew/autostart/: __init__.py  linux_systemd.py  macos_launchagent.py  windows_task.py
src/vigia_eew/ingest/: __init__.py  rest_funvisis.py  rest_geofon.py  rest_usgs.py  ws_emsc.py
src/vigia_eew/notify/: __init__.py  alert_window.py  controlador.py  controller.py  presentacion.py  presentation.py  queue.py  sound.py  toast.py
src/vigia_eew/pipeline/: __init__.py  dedup.py  filter.py  filtro.py  normalize.py  procesador.py  processor.py
tests/: conftest.py  test_agent_state.py  test_alert_queue.py  test_alert_window.py  test_app.py  test_autostart.py  test_autostart_linux.py  test_autostart_macos.py  test_autostart_windows.py  test_backoff.py  test_cli.py  test_config.py  test_controlador.py  test_controller.py  test_dedup.py  test_estado_agente.py  test_filter.py  test_filtro.py  test_geo.py  test_geocode.py  test_geoloc.py  test_i18n.py  test_models.py  test_normalize.py  test_presentacion.py  test_presentation.py  test_procesador.py  test_processor.py  test_resilience.py  test_resiliencia.py  test_rest_funvisis.py  test_rest_geofon.py  test_rest_usgs.py  test_simulacion.py  test_simulation.py  test_sound.py  test_state.py  test_subprocess_env.py  test_supervisor.py  test_toast.py  (+3 more)
