# pyproject.toml — Vigía-eew
# Dependency manager: uv · Build backend: hatchling (ADR-007, RF-27)
# Traceability: RF-26 (console entry point), RF-27 (PyPI package, semantic versioning)

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vigia-eew"
version = "0.2.1"                       # semantic versioning (RF-27)
description = "Real-time desktop seismic alert agent, impossible to ignore (EMSC push + USGS backup)."
readme = "README.md"
requires-python = ">=3.11"             # uses stdlib tomllib (RNF-11)
license = { file = "LICENSE" }
authors = [{ name = "Ernesto Crespo", email = "ecrespo@gmail.com" }]
keywords = ["earthquake", "sismo", "alerta", "eew", "emsc", "usgs", "venezuela"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
]

# Dependencias de runtime (ver IMPLEMENTATION-PLAN §5).
dependencies = [
    "websockets>=12.0",        # EMSC WS with native keepalive (RF-01/ADR-009)
    "httpx>=0.27",             # async USGS REST (RF-05/ADR-009)
    "pydantic>=2.6",           # model and config validation (RF-07/RF-24)
    "desktop-notifier>=5.0",   # cross-platform toast (RF-14)
    "platformdirs>=4.0",       # per-OS state/config paths (RF-06/RF-10)
    "tzdata>=2024.1",          # America/Caracas zone on Win/macOS (RF-18/RNF-12)
    "pystray>=0.19",           # system tray icon (RF-34/ADR-012)
    "Pillow>=10.0",            # tray icon image, pystray requirement (RF-34)
    "textual>=0.60",           # headless TUI dashboard (RF-36/ADR-013)
]

[project.urls]
Homepage = "https://github.com/ecrespo/vigia-eew"
Repository = "https://github.com/ecrespo/vigia-eew"
Issues = "https://github.com/ecrespo/vigia-eew/issues"

# Console entry point (RF-26). The cli module is completed in Phase 5.
[project.scripts]
vigia-eew = "vigia_eew.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
]
# Native packaging (Phase 8, RF-28..RF-30): only needed when building binaries
# with `packaging/build_*.{sh,ps1}`, not for development or installing from PyPI.
packaging = [
    "pyinstaller>=6.0",
]

# --- Configuración de herramientas ---

[tool.hatch.build.targets.wheel]
packages = ["src/vigia_eew"]

[tool.hatch.build.targets.sdist]
include = ["src/vigia_eew", "docs", "ARCHITECTURE.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "pystray"
ignore_missing_imports = true  # no published stubs/py.typed (RF-34)
